--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -93,7 +93,6 @@ In diesem Dokument wird der Entwurf der \Gls{CPB}, des Erweiterungsmoduls und de
 \section{Aufbau}
 	\subsection{Architekturdiagramm}
 	\begin{center}
-		\vspace{100px}
 		\includegraphics[width=0.8\textwidth]{./Diagramme/ArchitekturdiagrammmitServiceManager.png}
 	\end{center}
 	\clearpage %%sieht sonst noch zerrissener aus;    Gehts nicht irgendwie schöner? Sodass das Diagramm ganz oben quasi anliegt?
@@ -114,7 +113,11 @@ In diesem Dokument wird der Entwurf der \Gls{CPB}, des Erweiterungsmoduls und de
   Der Vorteil dieser Architektur ist eine klare Trennung von Benutzerinteraktion und Programmlogik sowie eine lose Kopplung zwischen einzelnen Funktionalitäten, was die Flexibilität und das modulare Testen deutlich erleichtert.
 \clearpage
   \subsection{Klassendiagramm}
-hier kommt ein mal das Klassendiagramm rein mit Verweis auf den Anhang - valle
+  \begin{center}
+	\includegraphics[width=\textwidth]{Diagramme/Klassendiagram_KOMPAKT.png}
+\end{center}
+\paragraph{Anmerkungen}
+eine hochauflösendere Darstellung des Klassendiagramms findet sich im Anhang.
 \clearpage
 %%\section{Klassenübersicht} brauchen wir nicht, da das bei uns schon alles im Inhaltsverzeichnis aufgelistet wird.
 \section{Klassenbeschreibung Model}
