Klassendiagramm final und kompaktergänzt. In Klasse CHaracteristics ein Attribut + IMUScaleRangeChar: ICharacteristic ergänzt und in Klasse Constants + IMU_FULL_SCALE_RANGE_CHAR: string ergänzt.

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -1290,71 +1290,72 @@ Es werden folgende Erweiterungen benötigt:\\
 \begin{tabular}[h]{p{15cm}c}
 Klassenname & Seite \\
 \hline
-Abstract Class AbstractPushUpActivity & 1 \\
-Abstract Class AbstractRunningActivity & 1 \\
-Abstract Class AbstractSitUpActivity & 1 \\
-Abstract Class AbstractStepActivity & 1 \\
-Abstract Class BaseModeViewmodel & 1 \\
-Class Accelerometere & 1 \\
-Class Activity & 1 \\
-Class ActivityManager & 1 \\
-Class ButtonEventArgs & 1 \\
-Class Characteristics & 1 \\
-Class ConfigContainer & 1 \\
-Class CountModeActivePage & 1 \\
-Class CountModePage & 1 \\
-Class CountModeViewmodel & 1 \\
-Class DBEntry & 1 \\
-Class DataBaseConnection & 1 \\
-Class DataEventArgs & 1 \\
-Class DataOverviewPage & 1 \\
-Class DataOverviewViewmodel & 1 \\
-Class DeviceEventArgs & 1 \\
-Class EarablesConnection & 1 \\
-Class ExceptionHandlingViewModel & 1 \\
-Class Gyroscope & 1 \\
-Class HomeMenuItem & 1 \\
-Class IMUDataEntry & 1 \\
-Class ImportExportPage & 1 \\ 
-Class ImportExportViewmodel & 1 \\
-Class LPF\_Accelerometer & 1 \\
-Class LPF\_Gyroscope & 1 \\ 
-Class ListenAndPerformActivePage & 1 \\ 
-Class ListenAndPerformPage & 1 \\
-Class ListenAndPerformViewmodel & 1 \\
-Class MainPage & 1 \\
-Class MenuPage & 1 \\
-Class MusicModeAllPage & 1 \\
-Class MusicModeViewmodel & 1 \\
-Class PopUpScanningPage & 1 \\
-Class PushUpActivityThreshold & 1 \\
-Class PushUpEventArgs & 1 \\
-Class RunningActivityThreshold & 1 \\
-Class RunningEventArgs & 1 \\
-Class ScanningPopUpViewModel & 1 \\
-Class ServiceManager & 1 \\
-Class SettingsPage & 1 \\
-Class SettingsService & 1 \\
-Class SettingsViewModel & 1 \\
-Class SitUpActivity & 1 \\
-Class SitUpActivityThreshold & 1 \\
-Class StepActivityActivityThreshold & 1 \\
-Class StepEventActivity & 1 \\
-Class StepModeActivePage & 1 \\
-Class StepModePage & 1 \\
-Class StepModeViewmodel & 1 \\
-Class User & 1 \\
-Enumeration MenuItemType & 1 \\
-Enumeration SamplingRate & 1 \\
-Interface ActivityArgs & 1 \\
-Interface CountableActivityArgs & 1 \\
-Interface IActivityManager & 1 \\
-Interface IDataBaseConnection & 1 \\
-Interface IEarablesConnection & 1 \\
-Interface IManager & 1 \\
-Interface ISettingsService & 1 \\
-Static Class Constants & 1 \\
-Static Class IMUDataExtractor & 1 \\
+Abstract Class AbstractPushUpActivity & 1\\
+Abstract Class AbstractRunningActivity & 1\\
+Abstract Class AbstractSitUpActivity & 1\\
+Abstract Class AbstractStepActivity & 1\\
+Abstract Class BaseModeViewmodel & 1\\
+Class Accelerometere & 1\\
+Class Activity & 1\\
+Class ActivityManager & 1\\
+Class App & 1\\
+Class ButtonEventArgs & 1\\
+Class Characteristics & 1\\
+Class ConfigContainer & 1\\
+Class CountModeActivePage & 1\\
+Class CountModePage & 1\\
+Class CountModeViewmodel & 1\\
+Class DBEntry & 1\\
+Class DataBaseConnection & 1\\
+Class DataEventArgs & 1\\
+Class DataOverviewPage & 1\\
+Class DataOverviewViewmodel & 1\\
+Class DeviceEventArgs & 1\\
+Class EarablesConnection & 1\\
+Class ExceptionHandlingViewModel & 1\\
+Class Gyroscope & 1\\
+Class HomeMenuItem & 1\\
+Class IMUDataEntry & 1\\
+Class ImportExportPage & 1\\
+Class ImportExportViewmodel & 1\\
+Class ListenAndPerformActivePage & 1\\
+Class ListenAndPerformPage & 1\\
+Class ListenAndPerformViewmodel & 1\\
+Class MainPage & 1\\
+Class MenuPage & 1\\
+Class MusicModeAllPage & 1\\
+Class MusicModeViewmodel & 1\\
+Class PopUpScanningPage & 1\\
+Class PushUpActivityThreshold & 1\\
+Class PushUpEventArgs & 1\\
+Class RunningActivityThreshold & 1\\
+Class RunningEventArgs & 1\\
+Class ScanningPopUpViewModel & 1\\
+Class ServiceManager & 1\\
+Class SettingsPage & 1\\
+Class SettingsService & 1\\
+Class SettingsViewModel & 1\\
+Class SitUpActivity & 1\\
+Class SitUpActivityThreshold & 1\\
+Class StepActivityActivityThreshold & 1\\
+Class StepEventActivity & 1\\
+Class StepModeActivePage & 1\\
+Class StepModePage & 1\\
+Class StepModeViewmodel & 1\\
+Class User & 1\\
+Enumeration LPF\_Accelerometer & 1\\
+Enumeration LPF\_Gyroscope & 1\\
+Enumeration MenuItemType & 1\\
+Enumeration SamplingRate & 1\\
+Interface ActivityArgs & 1\\
+Interface CountableActivityArgs & 1\\
+Interface IActivityManager & 1\\
+Interface IDataBaseConnection & 1\\
+Interface IEarablesConnection & 1\\
+Interface IManager & 1\\
+Interface ISettingsService & 1\\
+Static Class Constants & 1\\
+Static Class IMUDataExtractor & 1\\
 \end{tabular}
 
 
