--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -88,7 +88,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% CONTENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Einleitung}
-In diesem Dokument wird der Entwurf der \Gls{CPB}, des Erweiterungsmoduls und der App spezifiziert. Es wird auf die jeweiligen Klassen eingegangen und ihre Funktion erläutert. Außerdem wird die Interaktion der einzelnen Komponenten, mit Hilfe von Sequenzdiagrammen, beschrieben.
+In diesem Dokument wird der Entwurf der \Gls{CPB}, des Erweiterungsmoduls und der App spezifiziert. Zunächst werden einige kleinere Änderungen am Architekturdiagramm aufgezeigt. Dabei liegt der Fokus auf der überarbeiteten Kommunikation zwischen den einzelnen Modulen sowie auf der Ergänzung einer zentralen Schnittstelle im Model, welche die Modularität und Erweiterbarkeit verbessert. \\
+Darauf folgt eine umfassende Klassen- und Schnittstellenbeschreibung. Unterstützend zum großen Klassendiagramm werden die einzelnen Klassen bei ihrer Beschreibung nochmals visualisiert. Die einzelnen Modulabschnitte werden ebenfalls graphisch begleitet. \\
+Außerdem wird ein typischer Ablauf der App in einem Aktivitätsdiagramm beschrieben. \\
+Die genaue Interaktion der Klassen und Schnittstellen werden mit Hilfe von Sequenzdiagrammen ergänzend erläutert.
 
 \section{Aufbau}
 	\subsection{Architekturdiagramm}
